fix: improve color contrast on context menu

--- a/src/components/Breach.css
+++ b/src/components/Breach.css
@@ -4,7 +4,7 @@
 }
 
 .menu-item:hover {
-    background-color: azure;
+    background-color: rgb(48, 190, 251);
 }
 
 
